# OpenGL-Test

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
Exercises/: main_2.2.cpp  main_2.3.cpp  main_2.4.cpp  main_2.5.cpp  main_3.2.cpp
Exercises/Camera Exercises0/: camera.h  config.h  main.cpp
Exercises/Camera Exercises1/: camera.h  config.h  main.cpp  shader.vert
Exercises/Coordinates Exercise0/: config.h  main.cpp
Exercises/Coordinates Exercise1/: main.cpp
Exercises/Coordinates Exercise2/: main.cpp  shader.h
Exercises/Lighting Exercise 1/: main.cpp  shader.frag  shader.vert
Exercises/Lighting Exercise 2/: shader.frag
Exercises/Lighting Exercise 3/: shader.frag
Exercises/Lighting Exercise 4/: main.cpp  shader.frag  shader.vert
Exercises/Lighting Flashlight/: main.cpp  shader.frag
Exercises/Lighting Flashlight Soft/: main.cpp  shader.frag  shader.vert
Exercises/Lighting Maps Exercise 1/: main.cpp  shader.frag  shader.vert
Exercises/Lighting Maps Exercise 2/: main.cpp  shader.frag
Exercises/Lighting Maps Exercise 3/: main.cpp  shader.frag
Exercises/Materials Exercise 1/: main.cpp  shader.frag
Exercises/Shader Exercise0/: shader.h
Exercises/Shader Exercise2/: shader.h  shader.vert
Exercises/Shader Exercise3/: main.cpp
Exercises/Texture Exercise0/: shader.frag
Exercises/Texture Exercise1/: main.cpp
Exercises/Texture Exercise2/: main.cpp  shader.h
Exercises/Transformations Exercise 0/: main.cpp
dependencies/include/Camera/: camera.h
src/: config.h  glad.c  main.cpp  shader.frag  shader.vert  stb_image_implementation.cpp
(+5 files in other folders)
